# VRME-Server-Rust

./: .commitlintrc.js  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  config.example.toml  package.json  rustfmt.toml  settings.html  source-files.js
vrme_server/: .editorconfig  .gitignore  Cargo.toml  README.md  all.html  constant.VERSION.html  example-requests.md  fn.create_connection_pool.html  fn.create_persistent_connection_pool.html  fn.main.html  fn.read_settings.html  index.html  rustfmt.toml  sidebar-items.js
vrme_server/accounts/: index.html  sidebar-items.js
vrme_server/accounts/account/: index.html  sidebar-items.js  struct.Account.html  type.Date.html  type.Uuid.html
vrme_server/accounts/delete/: constant.DELETE_ACCOUNT_QUERY.html  constant.DELETE_AUTH_SESSION_QUERY.html  fn.delete_user_account.html  fn.handle_delete_account.html  fn.pipelined_prepare.html  index.html  sidebar-items.js
vrme_server/accounts/get_info/: constant.GET_ACCOUNT_INFO_QUERY.html  constant._IMPL_DESERIALIZE_FOR_AccountInfoResponse.html  constant._IMPL_SERIALIZE_FOR_AccountInfoResponse.html  fn.get_account_info.html  fn.handle_get_account_info.html  index.html  sidebar-items.js  struct.AccountInfoResponse.html
vrme_server/accounts/get_uuid/: constant.GET_UUID_GIVEN_EMAIL_QUERY.html  constant._IMPL_DESERIALIZE_FOR_GetUuidRequest.html  constant._IMPL_SERIALIZE_FOR_GetUuidRequest.html  fn.get_uuid_given_email.html  fn.handle_get_uuid.html  index.html  sidebar-items.js  struct.GetUuidRequest.html
vrme_server/accounts/register/: constant.CREATE_USER_QUERY.html  constant._IMPL_DESERIALIZE_FOR_RegistrationRequest.html  constant._IMPL_SERIALIZE_FOR_RegistrationRequest.html  fn.create_account_if_not_exists.html  fn.handle_registration.html  fn.make_success_response.html  fn.validate_email.html  fn.validate_name_length.html  fn.validate_request_payload.html  index.html  sidebar-items.js  struct.RegistrationRequest.html
vrme_server/accounts/update_info/: constant.UPSERT_NAME_QUERY.html  constant._IMPL_DESERIALIZE_FOR_UpdateAccountInformationRequest.html  constant._IMPL_SERIALIZE_FOR_UpdateAccountInformationRequest.html  fn.handle_update_user_account.html  fn.update_names.html  fn.update_user_account_handler.html  index.html  sidebar-items.js  struct.UpdateAccountInformationRequest.html
vrme_server/auth/: index.html  sidebar-items.js
vrme_server/auth/auth_payload/: constant.BASE64_ENCODED_AUTH_TOKEN_LEN.html  constant.INVALID_AUTH_TOKEN_LEN_ERR_MSG.html  constant._IMPL_DESERIALIZE_FOR_AuthPayload.html  constant._IMPL_SERIALIZE_FOR_AuthPayload.html  index.html  sidebar-items.js  struct.AuthPayload.html
vrme_server/auth/auth_token/: constant.AUTH_TOKEN_LEN.html  constant._IMPL_DESERIALIZE_FOR_AuthToken.html  constant._IMPL_SERIALIZE_FOR_AuthToken.html  index.html  sidebar-items.js  struct.AuthToken.html
vrme_server/auth/errors/: enum.AuthError.html  fn.make_error_message.html  index.html  (+1 more)
vrme_server/avatars/: index.html  sidebar-items.js
vrme_server/config/: default.example.toml  development.example.toml  production.example.toml
vrme_server/database/: enum.DatabaseError.html  index.html  sidebar-items.js  struct.ConnectionPool.html
vrme_server/json_error_handler/: fn.handle_deserialize_errors.html  fn.handle_json_error.html  fn.make_error_message.html  index.html  sidebar-items.js
vrme_server/logging/: constant.DEFAULT_LOGGING_LEVEL.html  fn.init.html  index.html  sidebar-items.js
vrme_server/meetings/: index.html  sidebar-items.js
vrme_server/presentations/: index.html  sidebar-items.js
vrme_server/service_errors/: constant._IMPL_SERIALIZE_FOR_ServiceError.html  enum.ServiceError.html  index.html  sidebar-items.js
vrme_server/settings/: constant.NESTED_SETTINGS_ENV_NAME_SEPARATOR.html  constant._IMPL_DESERIALIZE_FOR_AuthSettings.html  constant._IMPL_DESERIALIZE_FOR_DatabaseSettings.html  constant._IMPL_DESERIALIZE_FOR_LoggingLevel.html  constant._IMPL_DESERIALIZE_FOR_LoggingSettings.html  constant._IMPL_DESERIALIZE_FOR_RateLimitingSettings.html  constant._IMPL_DESERIALIZE_FOR_ServerSettings.html  constant._IMPL_DESERIALIZE_FOR_Settings.html  constant._IMPL_DESERIALIZE_FOR_TlsSettings.html  enum.LoggingLevel.html  enum.SettingsError.html  fn.default_auth_token_length.html  fn.default_auth_token_validity_duration.html  fn.default_cooldown_duration.html  fn.default_json_size_limit.html  fn.default_max_requests.html  fn.default_pool_size.html  index.html  sidebar-items.js  struct.AuthSettings.html  struct.DatabaseSettings.html  struct.LoggingSettings.html  struct.RateLimitingSettings.html  struct.ServerSettings.html  struct.Settings.html  struct.TlsSettings.html
vrme_server/src/: json_error_handler.rs  main.rs  service_errors.rs  welcome.rs
vrme_server/types/: index.html  sidebar-items.js
vrme_server/welcome/: constant.NAME.html  fn.welcome.html  index.html  sidebar-items.js
(+7791 files in other folders)
