[package]
name = "vrme-server-rust"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
hyper = "0.13.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
toml = "0.5.6"

[dev-dependencies]
pretty_assertions = "0.6.1"

