[package]
name = "vrme-server-rust"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
toml = "0.5.6"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
chrono = "0.4.10"

[dev-dependencies]
pretty_assertions = "0.6.1"

