[package]
name = "vrme-server"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
lazy_static = "1.4.0"
toml = "0.5.6"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
chrono = "0.4.10"
validator = "0.10.0"
validator_derive = "0.10.0"
base64 = "0.11.0"
futures = "0.3.4"
rand = "0.7.3"
tokio = { version = "0.2.13", features = ["rt-threaded", "blocking"] }
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "0.6.1"

