[package]
name = "vrme_server"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

[[bin]]
name = "vrme_server"
path = "src/main.rs"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
config = { version = "0.10.1", features = ["json", "yaml", "toml"] }
toml = "0.5.6"
actix-files = "0.2.1"
envy = "0.4.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = "0.2.13"
tokio-postgres = { version = "0.5.3", features = ["with-chrono-0_4", "with-uuid-0_8"] }
deadpool-postgres = "0.5.5"
serde_json = "1.0.48"
thiserror = "1.0.11"
base64 = "0.12.0"
chrono = "0.4.11"
ring = "0.16.11"
rand = "0.7.3"
rustls = "0.17.0"
